--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring Lion">
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Roaring Lion" title="Mufasa">
   </body>
 </html>
